--- a/TSAR/Views/Budget/Create.cshtml
+++ b/TSAR/Views/Budget/Create.cshtml
@@ -48,7 +48,9 @@
 
 <div>
 
-    @Html.ActionLink("Back to List", "Index")
+    <div align="center">
+        <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
+    </div>
 </div>
 
 @section Scripts {
