--- a/TSAR/Views/ManageTravel/Index.cshtml
+++ b/TSAR/Views/ManageTravel/Index.cshtml
@@ -13,11 +13,13 @@
         <b>Search by:</b><font color="Black"> @Html.TextBox("Search")<input type="submit" value="Search" style="color: black" /></font>}
 </p>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <div align="center">
+        <a id="button" href="@Url.Action("Create")" class="btn btn-primary">Create</a>
+    </div>
 </p>
 <table class="table">
     <tr>
-        
+
         <th>
             <font color="white">   @Html.DisplayNameFor(model => model.TravelCode)</font>
         </th>
@@ -31,28 +33,36 @@
             <font color="white">@Html.DisplayNameFor(model => model.TravelFee)</font>
         </th>
         <th></th>
+        <th></th>
+
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            <font color="gold" style = "text-transform:uppercase;">       @Html.DisplayFor(modelItem => item.TravelCode)</font>
-        </td>
-        <td>
-            <font color="gold"> @Html.DisplayFor(modelItem => item.Rate)</font>
-        </td>
-        <td>
-            <font color="gold"> @Html.DisplayFor(modelItem => item.Distance)</font>
-        </td>
-        <td>
-            <font color="gold"> @Html.DisplayFor(modelItem => item.TravelFee)</font>
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new {id = item.TravelCode}) |
-            @Html.ActionLink("Details", "Details", new {id = item.TravelCode}) |
-            @Html.ActionLink("Delete", "Delete", new {id = item.TravelCode})
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <font color="gold" style="text-transform:uppercase;">       @Html.DisplayFor(modelItem => item.TravelCode)</font>
+            </td>
+            <td>
+                <font color="gold"> @Html.DisplayFor(modelItem => item.Rate)</font>
+            </td>
+            <td>
+                <font color="gold"> @Html.DisplayFor(modelItem => item.Distance)</font>
+            </td>
+            <td>
+                <font color="gold"> @Html.DisplayFor(modelItem => item.TravelFee)</font>
+            </td>
+            <td>
+            <td>
+                <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Clients", new { id = item.TravelCode })'" />
+
+
+                <input type="button" title="Edit" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Clients", new { id = item.TravelCode })'" />
+
+                <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Clients", new { id = item.TravelCode })'" />
+            </td>
+            </td>
+        </tr>
+    }
 
 </table>
