Rating -Done by Jonathan Jagarath

--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -78,6 +78,11 @@
 
 </div>
 
+<div>
+    <br />
+    <input type="button" style="height:50px;width:200px" title="Rating" value="Rating" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Rating")'" />
+
+</div>
 
 
 
