Chnages to interfaces

--- a/TSAR/Views/Home/Contact.cshtml
+++ b/TSAR/Views/Home/Contact.cshtml
@@ -1,6 +1,7 @@
 ﻿@model TSAR.Models.EmailFormModel
 @{
     ViewBag.Title = "Contact";
+    Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 @using (Html.BeginForm())
 {
