--- a/TSAR/Views/Manage/ConsultantMenu.cshtml
+++ b/TSAR/Views/Manage/ConsultantMenu.cshtml
@@ -5,10 +5,17 @@
 }
 
 <h2>Consultant Menu</h2>
+<br/>
+<br/>
+<table class="table table-responsive">
+    <tbody>
+        <tr>
+            <td><input type="button" style="height:50px;width:200px" title="New Timesheet" value="New Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Timesheets")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="View Tickets" value="View Tickets" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Tickets")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="File Storage" value="File Storage" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Files")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="Apply for Leave" value="Apply for Leave" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Leaves")'" /></td>            
+        </tr>
+    </tbody>
+</table>
 
-<ul class ="table">
-    <li class="h2">
-        @Html.ActionLink("Leave", "Index", "Leaves")
-    </li>
-</ul>
 
