--- a/TSAR/Views/Roles/AnotherUserToRole.cshtml
+++ b/TSAR/Views/Roles/AnotherUserToRole.cshtml
@@ -8,25 +8,25 @@
 @using (Html.BeginForm("AnotherUserToRole", "Roles", FormMethod.Get))
 {
 
-    <table align="center" class="table">
+    <h2>Assign Role to User</h2>
+    <br/>
+    <br/>
+    <table class="table table-responsive">
+        <tbody>
         <tr>
-            <td>
-                User:
-            </td>
-            <td>
-                @Html.DropDownList("MyUser")
-            </td>
-            <td>
-                Role:
-            </td>
-            <td>
-                @Html.DropDownList("Hey")
-            </td>
-            <td>
-                <input type="submit" value="Add User To Role" class="btn btn-primary btn-sm">
-            </td>
+            <th class="h4" style="color: white">USER</th>
+            <th class="h4" style="color: white">ROLE</th>            
         </tr>
+        <tr>
+            <td>@Html.DropDownList("MyUser")</td>
+            <td>@Html.DropDownList("Hey")</td>
+            <td><input type="submit" value="Add User To Role" class="btn btn-primary btn-sm"></td>
+            <td><input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("ManagerMenu", "Manage")'" /></td>
+        </tr>
+        </tbody>
     </table>
+    <br/>
+    
 }
 
 @ViewBag.Message
