--- a/TSAR/css/agency.css
+++ b/TSAR/css/agency.css
@@ -13,7 +13,7 @@ body {
   color: #777777;
 }
 .text-primary {
-  color: #fed136;
+  color: goldenrod;
 }
 p {
   font-size: 14px;
@@ -30,13 +30,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #fed136;
+  color: goldenrod;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: goldenrod;
 }
 h1,
 h2,
@@ -59,8 +59,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: goldenrod;
+  border-color: goldenrod;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -71,8 +71,8 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: goldenrod;
+  border-color: goldenrod;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -94,17 +94,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: goldenrod;
+  border-color: goldenrod;
 }
 .btn-primary .badge {
-  color: #fed136;
+  color: goldenrod;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: goldenrod;
+  border-color: goldenrod;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -118,8 +118,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: goldenrod;
+  border-color: goldenrod;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -141,11 +141,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: goldenrod;
+  border-color: goldenrod;
 }
 .btn-xl .badge {
-  color: #fed136;
+  color: goldenrod;
   background-color: white;
 }
 .navbar-custom {
@@ -153,21 +153,21 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #fed136;
+  color: goldenrod;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #fec503;
+  color: goldenrod;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: goldenrod;
+  border-color: goldenrod;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -175,7 +175,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: goldenrod;
 }
 .navbar-custom .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -186,18 +186,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #fed136;
+  color: goldenrod;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: goldenrod;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: goldenrod;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -267,7 +267,7 @@ header .intro-text .intro-lead-in {
   font-size: 22px;
   line-height: 22px;
   margin-bottom: 25px;
-  color: Yellow;
+  color: whitesmoke;
 }
 header .intro-text .intro-heading {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -276,7 +276,7 @@ header .intro-text .intro-heading {
   font-size: 50px;
   line-height: 50px;
   margin-bottom: 25px;
-    color: yellow;
+    color: ivory;
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -443,7 +443,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #fed136;
+  background-color: goldenrod;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -598,7 +598,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: goldenrod;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -667,7 +667,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #fed136;
+  background-color: goldenrod;
 }
 .btn:focus,
 .btn:active,
@@ -751,11 +751,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: goldenrod;
 }
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: goldenrod;
 }
 img::selection {
   background: transparent;
@@ -764,7 +764,7 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  /*webkit-tap-highlight-color: #fed136;*/
+  /*webkit-tap-highlight-color: goldenrod;*/
 }
 
 /* Dropdown Button */
