--- a/TSAR/Views/Rating/Details.cshtml
+++ b/TSAR/Views/Rating/Details.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Consultant.FirstName)
+            @Html.DisplayNameFor(model => model.Consultant.FullName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Consultant.FirstName)
+            @Html.DisplayFor(model => model.Consultant.FullName)
         </dd>
 
         <dt>
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Reason)
+            @Html.DisplayNameFor(model => model.Comment)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Reason)
+            @Html.DisplayFor(model => model.Comment)
         </dd>
 
         <dt>
