--- a/TSAR/Views/Rating/Edit.cshtml
+++ b/TSAR/Views/Rating/Edit.cshtml
@@ -17,41 +17,62 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.RatingId)
-
+        
         <div class="form-group">
-            @Html.LabelFor(model => model.ConsultantNum, "ConsultantNum", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
+            <div align="center">
+                @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-offset-5 col-md-2">
+                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.ConsultantNum, "Consultant Name", htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-offset-5 col-md-2">
+                @Html.DropDownList("ConsultantNum", null, "--Select Name--", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Rate, new { htmlAttributes = new { @class = "form-control" } })
+            <div align="center">
+                @Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div align="center">
+                <span class="starRating" align="center">
+                    @Html.RadioButtonFor(model => model.Rate, "5", htmlAttributes: new { @id = "rating5", @name = "rating", @Value = "5" })
+                    <label for="rating5">5</label>
+                    @Html.RadioButtonFor(model => model.Rate, "4", htmlAttributes: new { @id = "rating4", @name = "rating", @Value = "4" })
+                    <label for="rating4">4</label>
+                    @Html.RadioButtonFor(model => model.Rate, "3", htmlAttributes: new { @id = "rating3", @name = "rating", @Value = "3" })
+                    <label for="rating3">3</label>
+                    @Html.RadioButtonFor(model => model.Rate, "2", htmlAttributes: new { @id = "rating2", @name = "rating", @Value = "2" })
+                    <label for="rating2">2</label>
+                    @Html.RadioButtonFor(model => model.Rate, "1", htmlAttributes: new { @id = "rating1", @name = "rating", @Value = "1" })
+                    <label for="rating1">1</label>
+                </span>
                 @Html.ValidationMessageFor(model => model.Rate, "", new { @class = "text-danger" })
             </div>
         </div>
 
+
         <div class="form-group">
-            @Html.LabelFor(model => model.Reason, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Reason, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Reason, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-offset-4 col-md-4">
+                @Html.TextAreaFor(model => model.Comment, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
-            </div>
-        </div>
+       
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div align="center">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
