--- a/TSAR/Views/Tickets/Edit.cshtml
+++ b/TSAR/Views/Tickets/Edit.cshtml
@@ -42,10 +42,12 @@
             </div>
         </div>
 
+
         <div class="form-group">
             @Html.LabelFor(model => model.Priority, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Priority, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-6">
+                @*@Html.EditorFor(model => model.Priority, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.DropDownListFor(model => model.Priority, new List<SelectListItem> { new SelectListItem { Text = "Low", Value = "Low" }, new SelectListItem() { Text = "Medium", Value = "Medium" }, new SelectListItem() { Text = "High", Value = "High" } }, "---Select---", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Priority, "", new { @class = "text-danger" })
             </div>
         </div>
