--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -17,19 +17,19 @@
     </thead>
     <tbody>
     <tr>
-        <td><input type="button" style="height:50px;width:200px" title="Leave" value="Leave" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Leaves")'" /></td>        
+        <td><input type="button" style="height:50px;width:200px" title="Leave Requests" value="Leave Requests" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Leaves")'" /></td>        
         <td><input type="button" style="height:50px;width:200px" title="View Clients" value="View Clients" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Clients")'" /></td>
         <td><input type="button" style="height:50px;width:200px" title="Administer Roles" value="Administer Roles" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Roles")'" /></td>
     </tr>
     <tr>
-        <td><input type="button" style="height:50px;width:200px" title="Timesheets" value="Timesheets" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Timesheets")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="View Timesheets" value="View Timesheets" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Timesheets")'" /></td>
         <td><input type="button" style="height:50px;width:200px" title="Tickets" value="Tickets" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Tickets")'" /></td>
         <td><input type="button" style="height:50px;width:200px" title="Document warehouse" value="Document warehouse" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Files")'" /></td>
     </tr>
     <tr>
-        <td><input type="button" style="height:50px;width:200px" title="Rating" value="Rating" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Rating")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="Ratings" value="Ratings" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Rating")'" /></td>
         <td><input type="button" style="height:50px;width:200px" title="Budget" value="Budget" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Budget")'" /></td>
-        <td><input type="button" style="height:50px;width:200px" title="Instant Message Dashboard" value="Instant Message Dashboard" class="btn btn-primary" onclick="location.href='@Url.Action("Dashboard", "Dashboard")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="IM Dashboard" value="IM Dashboard" class="btn btn-primary" onclick="location.href='@Url.Action("Dashboard", "Dashboard")'" /></td>
     </tr>
     <tr>
         <td><input type="button" style="height:50px;width:200px" title="Commission" value="Commission" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Commissions")'" /></td>
