--- a/TSAR/css/agency.css
+++ b/TSAR/css/agency.css
@@ -847,3 +847,23 @@ body {
 .starRating:not(:hover) > :checked ~ label:before{
   opacity : 1;
 }
+
+
+.scrollToTop{
+    width:50px; 
+    height:90px;
+    padding:10px; 
+    text-align:center; 
+    background: whiteSmoke;
+    font-weight: bold;
+    color: #444;
+    text-decoration: none;
+    position:fixed;
+    top:75px;
+    right:40px;
+    display:none;
+    background: url('../img/up arrow2.png') no-repeat 0px 20px;
+}
+.scrollToTop:hover{
+    text-decoration:none;
+}
